fix: visibility of console result in light mode #73

--- a/src/css/components/_monaco.scss
+++ b/src/css/components/_monaco.scss
@@ -116,9 +116,11 @@
     );
   }
 
-  min-height: 80px;
-  min-width: 200px;
-  // max-width: calc(theme("screens.lg") - theme("spacing.3") - 25px - var(--spacing));
+  & {
+    min-height: 80px;
+    min-width: 200px;
+    // max-width: calc(theme("screens.lg") - theme("spacing.3") - 25px - var(--spacing));
+  }
 }
 
 .app#console {
